Got my images loading in my console, and pulling to my screen. As well as adding in a little bit of styling

--- a/index.html
+++ b/index.html
@@ -40,7 +40,23 @@
 
   <!-- SECTION -->
   <main>
-    
+    <div class="container-fluid">
+      <section>
+        <div class="row" id="images">
+          <div class="col-6">
+
+          </div>
+        </div>
+      </section>
+    </div>
+    <section class="container-fluid">
+      <div class="row d-block">
+        <div class="col-md-5">
+          <h1 class="card quote-card fs-1 text-primary">Will be my Quote sections</h1>
+        </div>
+
+      </div>
+    </section>
   </main>
 
   <!-- SECTION -->
