finally have new todos being created and drawing to the console

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <form onsubmit="app.todosController.createTodo()">
                   <div class="d-flex mb-2">
                     <label for="Create New Task"></label>
-                    <input required type="text" name="title" class="form-control form-input text-center fs-3" id="title"
-                      minlength="3 characters" maxlength="150" placeholder="Task Title">
+                    <input required type="text" name="description" class="form-control form-input text-center fs-3"
+                      id="description" minlength="3 characters" maxlength="150" placeholder="Task Description">
                     <button title="createTask" class="btn btn-outline-success btn-warning fw-bold" type="submit">Create
                       New Task</button>
                   </div>
