--- a/index.html
+++ b/index.html
@@ -42,18 +42,16 @@
 
   <!-- SECTION -->
 
-  <main class="mb-5">
-    <div class="conatiner-fluid">
+  <main>
+    <div class="conatiner-fluid mb-5">
       <div class="row">
         <div class="col-12 text-end mt-5 px-5">
-          <button class="btn btn-outline-light btn-info rounded-pill fw-bold shadow border border-3 border-dark"
-            type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-            aria-controls="offcanvasRight">Toggle to get
-            To-Do's
-          </button>
-          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+
+          <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
+            id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
             <div class="offcanvas-header">
-              <h1 class="offcanvas-title text-center fw-bold" id="offcanvasRightLabel">To-Do's</h1>
+              <h1 class="offcanvas-title fw-bold text-decoration-underline" id="offcanvasRightLabel">To-Do's
+              </h1>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -63,15 +61,22 @@
                 <form onsubmit="app.todosController.createTodo()">
                   <div class="d-flex mb-2">
                     <label for="Create New Task"></label>
-                    <input required type="text" name="description" class="form-control form-input text-center fs-3"
-                      id="description" minlength="3 characters" maxlength="150" placeholder="Task Description">
-                    <button title="createTask" class="btn btn-outline-success btn-warning fw-bold" type="submit">Create
+                    <input required type="text" name="description"
+                      class="form-control form-input text-center fs-3 border border-solid" id="description"
+                      minlength="3 characters" maxlength="150" placeholder="Task Description">
+                    <button title="createTask" class="btn btn-outline-dark btn-success fw-bold" type="submit">Create
                       New Task</button>
                   </div>
+
+
+                  <div class="text-center fs-4">Incompleted Tasks :
+                    <span class="text-end fs-1 fw-bold" id="todosCount" ${this.count}>
+                    </span>
+                  </div>
+
                   <div id="todosList" class="text-center">
-                    <div class="text-end" id="todosCount" ${this.count}></div>
                     <!-- <div class="card todoCard">
-                            <div class="justify-content-between mx-3 g-2">
+                            <div class="justify-content-between">
                               <input type="checkbox">
                                 <span class="fs-2 g-2">Todo Description</span>
                               <button class="btn btn-outline-dark btn-danger fs-3 fw-bold">Delete</button>
@@ -86,31 +91,40 @@
       </div>
     </div>
 
-
-
-
     <div class="container-fluid">
-      <div class="row justify-content-between align-text-center">
+      <div class="row d-flex justify-content-around align-items-center">
         <div class="col-md-8 mx-4 card quote-card mb-3 rounded-pill border border-4 border-danger">
           <!-- //STUB - My Quotes section -->
-          <div class="card bg-info mb-3 mt-3 rounded-pill justify-content-center shadow text-dark">
+          <div class="card bg-info mb-3 mt-3 rounded-pill text-dark">
             <div class="card-body" id="drawQuotesList">
               <!-- <div class="text-center fs-1">this quote</div>
                 <div class="text-end mx-2 px-2 fs-3 fw-intalic">The Author</div> -->
               <!-- <i class="mdi fw-bold  mdi-book-open-page-variant"></i> -->
-
-
             </div>
           </div>
         </div>
       </div>
 
-      <div class="row justify-content-between">
-        <div class="col-md-10 card mx-4 rounded-pill border border-4 border-danger">
-          <div class="align-center justify-content-around">
+
+
+
+      <div class="row justify-content-around align-items-center mb-4 mt-2 mx-2">
+        <div class="col-md-10 card rounded-pill border border-4 border-danger">
+          <div class="justify-content-between d-flex">
             <!-- //STUB - My Clock/Weather/off-canvas toggle Section -->
-            <h1 class="fw-bold text-danger text-center" id="Clock"></h1>
             <h1 class="mc-2">Weather</h1>
+            <h1 class="fw-bold text-danger text-center" id="Clock"></h1>
+
+            <div class="text-end">
+              <button
+                class="btn btn-outline-light btn-info rounded-pill fw-bold shadow border border-3 border-dark mt-2"
+                type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+                aria-controls="offcanvasRight">Click to get your
+                To-Do's
+              </button>
+
+            </div>
+
           </div>
         </div>
       </div>
@@ -118,15 +132,15 @@
 
   </main>
 
+  <div class="container-fluid">
+    <div class="row" id="images">
+      <div class="col-6"></div>
+    </div>
+  </div>
   <!-- SECTION -->
   <footer class="bg-dark text-light">
     <div class="text-center no-select">
       <p class="mb-0"><small>Made with 💖 by This Guy </small></p>
-    </div>
-    <div class="container-fluid">
-      <div class="row" id="images">
-        <div class="col-6"></div>
-      </div>
     </div>
   </footer>
 
