I have my fahrenheits drawing to my page

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="col-md-10 card rounded-pill border border-4 border-danger">
           <div class="justify-content-between d-flex">
             <!-- //STUB - My Clock/Weather/off-canvas toggle Section -->
-            <h1 class="mc-2">Weather</h1>
+            <h1 class="mc-2" id="weatherTemp">Weather</h1>
             <h1 class="fw-bold text-danger text-center" id="Clock"></h1>
 
             <div class="text-end">
