got weather set up but still working on the onclick for it.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h1 class="mc-2" id="weatherTemp">Weather</h1>
             <h1 class="fw-bold text-danger text-center" id="Clock"></h1>
 
-            <div class="text-end">
+            <div class="text-md-end">
               <button
                 class="btn btn-outline-light btn-info rounded-pill fw-bold shadow border border-3 border-dark mt-2"
                 type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
